--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h1>Ivanov Ivan Ivanovich</h1>
 		<h3>IT master</h3>
 		<p>
-			<a href="mailto:xx@yy.zz">E-mail adress</a>
+			<a href="mailto:xx@yy.zz">E-mail address</a>
 			<a href="www.yandex.ru">Profile link</a>
 		</p>
 
@@ -44,9 +44,9 @@
 	<div id="footer">
 
 		Name
-		Adress
+		Address
 		Phone
-		Adress
+		Address
 
 	</div>
 </body>
